--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "dotenv": "16.3.1",
     "ejs": "3.1.8",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "mysql2": "3.6.3",
+    "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
