--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "16.3.1",
     "ejs": "3.1.8",
     "express": "4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "mysql2": "3.6.3",
     "sweetalert2": "^11.10.2"
