--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version":2,
     "builds": [
         {
-            "src": "index.js",
+            "src": "./index.js",
             "use":"@vercel/node"
         }
     ],
-    "routes": [
+    "routers": [
         {
             "src":"/(.)",
-            "dest":"index.js"
+            "dest": "/"
         }
     ]
 }
