--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/QuocTai2002/Fullstack_Backend-nodejs#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "ejs": "3.1.8",
     "express": "4.18.2",
